--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,11 +1,9 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "dist/**/*",
-      "use": "@vercel/static"
-    }
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/" }
   ],
+
   "routes": [
     {
       "src": "/(.*)",
