--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,13 +1,6 @@
 {
   "version": 2,
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/" }
-  ],
-
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
-    }
+    { "src": "/.*", "dest": "/index.html" }
   ]
 }
