--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,5 +1,10 @@
 {
   "version": 2,
+  "functions": {
+    "server.js": {
+      "includeFiles": "node_modules/lighthouse/shared/localization/locales/**"
+    }
+  },
   "builds": [
     { "src": "server.js", "use": "@vercel/node" }
   ],
