--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "functions": {
     "backend/server.js": {
-      "runtime": "@vercel/node",
+      "runtime": "@vercel/node@1.16.1",
       "includeFiles": "backend/node_modules/lighthouse/shared/localization/locales/**",
       "memory": 1024,
       "maxDuration": 60
