new folder name1

--- a/api/vercel.json
+++ b/api/vercel.json
@@ -2,10 +2,11 @@
   "version": 2,
   "functions": {
     "api/server.js": {
-      "runtime": "@vercel/node@1.16.1",
-      "includeFiles": "api/node_modules/lighthouse/shared/localization/locales/**",
-      "memory": 1024,
-      "maxDuration": 60
+      "runtime": "nodejs20.x",
+      "includeFiles": "lighthouse-locales/**"
     }
-  }
+  },
+  "routes": [
+    { "src": "/(.*)", "dest": "api/server.js" }
+  ]
 }
